# bincsv

./: .gitignore  README.md  pyproject.toml
bincsv/: __main__.py
example/: config_template.json  ssh.csv  ssh_sbom.json  systemd.csv  systemd_sbom.json
