[tool.poetry]
name = "bincsv"
version = "0.1.0"
description = "extract binary dependency data and package it into a CSV"
authors = ["Richard Estwick <richard@cybeats,com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.6,<3.11"
pandas = "^2.0.2"
angr = "^9.2.97"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
csv2cdx = "bincsv.__main__:main"



